--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -25,7 +25,8 @@ Executable star-terminal
     mtl                       >= 2     && < 3,
     snap-core                 >= 0.9   && < 0.10,
     snap-server               >= 0.9   && < 0.10,
-    text
+    text,
+    transformers
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
