--- a/star-types/star-types.cabal
+++ b/star-types/star-types.cabal
@@ -1,4 +1,4 @@
-Name:                star-terminal
+Name:                star-types
 Version:             0.1
 Synopsis:            Project Synopsis Here
 Description:         Project Description Here
@@ -10,24 +10,14 @@ Category:            Web
 Build-type:          Simple
 Cabal-version:       >=1.2
 
-Executable star-terminal
+Library
   hs-source-dirs: src
-  main-is: Main.hs
-
-  Build-depends:
-    base                      >= 4     && < 5,
-    blaze-html,
-    blaze-markup,
-    bytestring                >= 0.9.1 && < 0.11,
-    case-insensitive,
+  Exposed-modules:     Application.Star.Ballot,
+                       Application.Star.BallotStyle
+  Build-depends:        
+    base               >= 4     && < 5,
     containers,
-    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
-    mtl                       >= 2     && < 3,
-    snap-core                 >= 0.9   && < 0.10,
-    snap-server               >= 0.9   && < 0.10,
-    star-types,
-    text,
-    transformers
+    text
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
