--- a/star-types/star-types.cabal
+++ b/star-types/star-types.cabal
@@ -13,7 +13,10 @@ Cabal-version:       >=1.2
 Library
   hs-source-dirs: src
   Exposed-modules:     Application.Star.Ballot,
-                       Application.Star.BallotStyle
+                       Application.Star.BallotStyle,
+                       Application.Star.ID,
+                       Application.Star.Precinct,
+                       Application.Star.Voter
   Build-depends:        
     base               >= 4     && < 5,
     containers,
