--- a/star-types/star-types.cabal
+++ b/star-types/star-types.cabal
@@ -14,13 +14,19 @@ Library
   hs-source-dirs: src
   Exposed-modules:     Application.Star.Ballot,
                        Application.Star.BallotStyle,
+                       Application.Star.HashChain,
                        Application.Star.ID,
                        Application.Star.Precinct,
                        Application.Star.Voter
   Build-depends:        
     base               >= 4     && < 5,
+    binary,
+    bytestring,
+    cassava,
     containers,
-    text
+    SHA,
+    text,
+    vector
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
