--- a/star-types/star-types.cabal
+++ b/star-types/star-types.cabal
@@ -15,11 +15,13 @@ Library
   Exposed-modules:     Application.Star.Ballot,
                        Application.Star.BallotStyle,
                        Application.Star.ID,
+                       Application.Star.Mod,
                        Application.Star.Precinct,
                        Application.Star.Voter
   Build-depends:        
     base               >= 4     && < 5,
     containers,
+    random             >= 1     && < 2,
     text
 
   if impl(ghc >= 6.12.0)
