Aeson instances for EncryptedRecord

--- a/star-types/star-types.cabal
+++ b/star-types/star-types.cabal
@@ -19,7 +19,9 @@ Library
                        Application.Star.Precinct,
                        Application.Star.Voter
   Build-depends:        
+    aeson,
     base               >= 4     && < 5,
+    base64-bytestring,
     binary,
     bytestring,
     cassava,
