--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -21,11 +21,14 @@ Executable star-terminal
     bytestring                >= 0.9.1 && < 0.11,
     case-insensitive,
     containers,
+    data-default,
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl                       >= 2     && < 3,
+    random,
     snap-core                 >= 0.9   && < 0.10,
     snap-server               >= 0.9   && < 0.10,
     star-types,
+    star-util,
     text,
     transformers
 
