--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -16,6 +16,8 @@ Executable star-terminal
 
   Build-depends:
     base                      >= 4     && < 5,
+    base16-bytestring,
+    binary,
     blaze-html,
     blaze-markup,
     bytestring                >= 0.9.1 && < 0.11,
@@ -25,6 +27,7 @@ Executable star-terminal
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl                       >= 2     && < 3,
     random,
+    scrypt,
     snap-core                 >= 0.9   && < 0.10,
     snap-server               >= 0.9   && < 0.10,
     star-types,
