--- a/star-util/star-util.cabal
+++ b/star-util/star-util.cabal
@@ -12,7 +12,8 @@ Cabal-version:       >=1.2
 
 Library
   hs-source-dirs: src
-  Exposed-modules:     Application.Star.Util
+  Exposed-modules:     Application.Star.CommonImports,
+                       Application.Star.Util
   Build-depends:        
     base                      >= 4     && < 5,
     bytestring,
@@ -21,6 +22,7 @@ Library
     MonadCatchIO-transformers,
     mtl                       >= 2.2.1,
     text,
+    snap                      >= 0.13  && < 0.14,
     snap-core                 >= 0.9   && < 0.10,
     snap-server               >= 0.9   && < 0.10,
     stm
