--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -15,6 +15,7 @@ Executable star-terminal
   main-is: Main.hs
 
   Build-depends:
+    aeson,
     base                      >= 4     && < 5,
     base16-bytestring,
     binary,
@@ -24,6 +25,7 @@ Executable star-terminal
     case-insensitive,
     containers,
     data-default,
+    http-client,
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl                       >= 2     && < 3,
     random,
@@ -32,7 +34,8 @@ Executable star-terminal
     star-types,
     star-util,
     text,
-    transformers
+    transformers,
+    uuid
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
