--- a/append-only-bb/append-only-bb.cabal
+++ b/append-only-bb/append-only-bb.cabal
@@ -23,6 +23,7 @@ library
                      , HDBC-sqlite3 >=2.3.3.0 && <2.4
                      , aeson >=0.8.0.2 && < 0.9
                      , base >=4.7 && <4.8
+                     , base64-bytestring >=0.1.0.1 && <0.2
                      , byteable >= 0.1.1
                      , bytestring >= 0.10.4.0
                      , convertible >= 1.1.0.0 && <1.2
@@ -59,6 +60,7 @@ executable bbserver
                      , text >= 1.2 && < 1.3
                      , time >=1.4 && <1.5
                      , transformers >=0.4 && < 0.5
+                     , unordered-containers >=0.2 && <0.3
                      , utf8-string >=0.3.8 && < 0.4
                      , old-locale
   hs-source-dirs:      bbserver
