--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -19,6 +19,12 @@ executable star-controller
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    FlexibleContexts, OverloadedStrings
-  build-depends:       base >=4.6 && <4.7, star-types >=0.1 && <0.2, star-util >=0.1 && <0.2, MonadCatchIO-transformers >=0.3 && <0.4, random >=1.0 && <1.1, containers >=0.5 && <0.6
+  build-depends:       base >=4.6 && <4.7,
+                       star-types >=0.1 && <0.2,
+                       star-util >=0.1 && <0.2,
+                       MonadCatchIO-transformers >=0.3 && <0.4,
+                       random >=1.0 && <1.1,
+                       containers >=0.5 && <0.6,
+                       lens >= 4.4 && <4.5
   -- hs-source-dirs:      
   default-language:    Haskell2010
