--- a/star-util/star-util.cabal
+++ b/star-util/star-util.cabal
@@ -15,6 +15,7 @@ Library
   Exposed-modules:     Application.Star.CommonImports,
                        Application.Star.Util
   Build-depends:        
+    aeson                     >= 0.7   && < 0.9,
     base                      >= 4     && < 5,
     bytestring,
     containers,
