--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -22,6 +22,8 @@ executable star-controller
   build-depends:       base >=4.6 && <4.7,
                        star-types >=0.1 && <0.2,
                        star-util >=0.1 && <0.2,
+                       stm >= 2.4 && <2.5,
+                       text >= 1.2 && <1.3,
                        MonadCatchIO-transformers >=0.3 && <0.4,
                        random >=1.0 && <1.1,
                        containers >=0.5 && <0.6,
