--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -1,14 +1,39 @@
 Name:                star-terminal
 Version:             0.1
-Synopsis:            Project Synopsis Here
-Description:         Project Description Here
+Synopsis:            Prototype of a voting machine
 License:             AllRightsReserved
-Author:              Author
-Maintainer:          maintainer@example.com
+Author:              Jesse Hallett <jesse@galois.com>
+Maintainer:          Jesse Hallett <jesse@galois.com>
 Stability:           Experimental
-Category:            Web
+Category:            Application
 Build-type:          Simple
 Cabal-version:       >=1.2
+Description:
+  A prototype of one component of [STAR-Vote][], a secure and auditable voting system.
+  .
+  STAR-Vote describes several machines that are involved in the voting process.
+  This project implements software for a voting terminal.
+  It consists of a web server.
+  The intention is that each voting terminal runs its own instance of the server,
+  in addition to a web browser, which displays a user interface to the voter.
+  .
+  The user interface is optimized for tablet-sized touchscreen devices;
+  but it will work fine on mouse-operated computers too.
+  .
+  The server is started by running the `star-terminal` executable.
+  It requires certain environment variables to provide configuration parameters.
+  Examples of those parameters are provided in the `start.sh` script.
+  See `Application.StarTerminal.State` for parameter documentation.
+  .
+  Quickstart:
+  .
+  * `make`
+  * `./start.sh`
+  * In a web browser, navigate to [http://localhost:8000/ballots][localhost]
+  * Enter the code: 25682
+  .
+  [STAR-Vote]: https://www.usenix.org/system/files/conference/evtwote13/jets-0101-bell.pdf
+  [localhost]: http://localhost:8000/ballots
 
 Executable star-terminal
   hs-source-dirs: src
