--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -20,10 +20,14 @@ executable star-controller
   -- other-modules:       
   other-extensions:    FlexibleContexts, OverloadedStrings
   build-depends:       base >=4.6 && <4.7,
+                       http-client >=0.4 && <0.5,
+                       http-client-tls >=0.2 && <0.3,
+                       split >=0.2 && <0.3,
                        star-types >=0.1 && <0.2,
                        star-util >=0.1 && <0.2,
                        stm >= 2.4 && <2.5,
                        text >= 1.2 && <1.3,
+                       unix >= 2.6 && <2.7,
                        MonadCatchIO-transformers >=0.3 && <0.4,
                        random >=1.0 && <1.1,
                        containers >=0.5 && <0.6,
