--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -19,7 +19,8 @@ executable star-controller
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    FlexibleContexts, OverloadedStrings
-  build-depends:       base >=4.6 && <4.7,
+  build-depends:       aeson >=0.7 && <0.8,
+                       base >=4.6 && <4.7,
                        http-client >=0.4 && <0.5,
                        http-client-tls >=0.2 && <0.3,
                        split >=0.2 && <0.3,
@@ -28,6 +29,7 @@ executable star-controller
                        stm >= 2.4 && <2.5,
                        text >= 1.2 && <1.3,
                        unix >= 2.6 && <2.7,
+                       unordered-containers >=0.2 && <0.3,
                        MonadCatchIO-transformers >=0.3 && <0.4,
                        random >=1.0 && <1.1,
                        containers >=0.5 && <0.6,
