--- a/star-util/star-util.cabal
+++ b/star-util/star-util.cabal
@@ -17,7 +17,9 @@ Library
   Build-depends:        
     aeson                     >= 0.7   && < 0.9,
     base                      >= 4     && < 5,
+    blaze-html                >= 0.7   && < 0.8,
     bytestring,
+    case-insensitive          >= 1.2   && < 1.3,
     containers,
     data-default,
     MonadCatchIO-transformers,
