--- a/star-voter-db/star-voter-db.cabal
+++ b/star-voter-db/star-voter-db.cabal
@@ -19,6 +19,23 @@ executable star-voter-db
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    FlexibleContexts, OverloadedStrings
-  build-depends:       base >=4.6 && <4.8, star-util >=0.1 && <0.2, star-types >=0.1 && <0.2, stm >=2.4 && <2.5, bytestring >=0.10 && <0.11, containers >=0.5 && <0.6, text >=1.2 && <1.3
+  build-depends:       acid-state               >=0.12.3  && <0.13,
+                       barcodes-code128         >= 0.1    && < 0.2,
+                       base                     >=4.6     && <4.8,
+                       blaze-markup             >=0.6     && <0.7,
+                       blaze-html               >=0.7.0.3 && <0.8,
+                       bytestring               >=0.10    && <0.11,
+                       containers               >=0.5     && <0.6,
+                       data-default             >=0.5     && <0.6,
+                       digestive-functors       >=0.7.1.1 && <0.8,
+                       digestive-functors-blaze >=0.6.0.4 && <0.7,
+                       digestive-functors-snap  >=0.6.1.0 && <0.7,
+                       HPDF                     >=1.4.6   && <1.5,
+                       lens                     >=4.4     && <4.6,
+                       safecopy                 >=0.8.3   && <0.9, 
+                       star-types               >=0.1     && <0.2,
+                       star-util                >=0.1     && <0.2,
+                       text                     >=1.1     && <1.3,
+                       transformers             >=0.4     && <0.5
   -- hs-source-dirs:      
   default-language:    Haskell2010
