--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -19,21 +19,23 @@ executable star-controller
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    FlexibleContexts, OverloadedStrings
-  build-depends:       aeson                     >=0.7  && <0.9,
-                       base                      >=4.6  && <4.8,
-                       blaze-html                >=0.7  && <0.8,
-                       http-client               >=0.4  && <0.5,
-                       http-client-tls           >=0.2  && <0.3,
-                       split                     >=0.2  && <0.3,
-                       star-types                >=0.1  && <0.2,
-                       star-util                 >=0.1  && <0.2,
-                       stm                       >= 2.4 && <2.5,
-                       text                      >= 1.2 && <1.3,
-                       unix                      >= 2.6 && <2.8,
-                       unordered-containers      >=0.2  && <0.3,
-                       MonadCatchIO-transformers >=0.3  && <0.4,
-                       random                    >=1.0  && <1.1,
-                       containers                >=0.5  && <0.6,
-                       lens                      >= 4.4 && <4.6
+  build-depends:       acid-state                >=0.12.3 && < 0.13,
+                       aeson                     >=0.7    && <0.9,
+                       base                      >=4.6    && <4.8,
+                       blaze-html                >=0.7    && <0.8,
+                       containers                >=0.5    && <0.6,
+                       http-client               >=0.4    && <0.5,
+                       http-client-tls           >=0.2    && <0.3,
+                       lens                      >= 4.4   && <4.6,
+                       MonadCatchIO-transformers >=0.3    && <0.4,
+                       random                    >=1.0    && <1.1,
+                       safecopy                  >=0.8.3  && <0.9,
+                       split                     >=0.2    && <0.3,
+                       star-types                >=0.1    && <0.2,
+                       star-util                 >=0.1    && <0.2,
+                       stm                       >= 2.4   && <2.5,
+                       text                      >= 1.2   && <1.3,
+                       unix                      >= 2.6   && <2.8,
+                       unordered-containers      >=0.2    && <0.3
   -- hs-source-dirs:      
   default-language:    Haskell2010
