--- a/star-util/star-util.cabal
+++ b/star-util/star-util.cabal
@@ -15,7 +15,8 @@ Library
   Exposed-modules:     Application.Star.CommonImports,
                        Application.Star.Templates,
                        Application.Star.Util
-  Build-depends:        
+  Build-depends:
+    acid-state                >= 0.12.3 && < 0.13,
     aeson                     >= 0.7   && < 0.9,
     base                      >= 4     && < 5,
     blaze-html                >= 0.7   && < 0.8,
