--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -40,23 +40,26 @@ Executable star-terminal
   main-is: Main.hs
 
   Build-depends:
+    acid-state                >= 0.12.3 && < 0.13,
     aeson,
-    base                      >= 4     && < 5,
+    base                      >= 4      && < 5,
     base16-bytestring,
     binary,
     blaze-html,
     blaze-markup,
-    bytestring                >= 0.9.1 && < 0.11,
+    bytestring                >= 0.9.1  && < 0.11,
     case-insensitive,
     containers,
     data-default,
     http-client,
     http-client-tls,
-    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
-    mtl                       >= 2     && < 3,
+    MonadCatchIO-transformers >= 0.2.1  && < 0.4,
+    mtl                       >= 2      && < 3,
+    lens                      >= 4.4    && < 4.7,
     random,
-    snap-core                 >= 0.9   && < 0.10,
-    snap-server               >= 0.9   && < 0.10,
+    safecopy                  >= 0.8.3  && < 0.9,
+    snap-core                 >= 0.9    && < 0.10,
+    snap-server               >= 0.9    && < 0.10,
     star-types,
     star-util,
     text,
