Have star-controller use the same dir structure
The other sub-projects have the Haskell code under src/. Now
star-controller does as well.

--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -17,6 +17,7 @@ cabal-version:       >=1.10
 
 executable star-controller
   main-is:             Main.hs
+  hs-source-dirs:      src
   -- other-modules:       
   other-extensions:    FlexibleContexts, OverloadedStrings
   build-depends:       acid-state                >=0.12.3 && < 0.13,
