--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -24,6 +24,7 @@ executable star-controller
                        aeson                     >=0.7    && <0.9,
                        base                      >=4.6    && <4.8,
                        blaze-html                >=0.7    && <0.8,
+                       bytestring                >=0.10.4 && < 0.11,
                        containers                >=0.5    && <0.6,
                        http-client               >=0.4    && <0.5,
                        http-client-tls           >=0.2    && <0.3,
