--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -53,11 +53,13 @@ Executable star-terminal
     case-insensitive,
     containers,
     data-default,
+    HPDF                      >=1.4.6   && <1.5,
     http-client,
     http-client-tls,
     MonadCatchIO-transformers >= 0.2.1  && < 0.4,
     mtl                       >= 2      && < 3,
     lens                      >= 4.4    && < 4.7,
+    old-locale,
     random,
     safecopy                  >= 0.8.3  && < 0.9,
     snap-core                 >= 0.9    && < 0.10,
@@ -65,6 +67,7 @@ Executable star-terminal
     star-types,
     star-util,
     text,
+    time,
     transformers,
     uuid
 
