--- a/star-crypto/star-crypto.cabal
+++ b/star-crypto/star-crypto.cabal
@@ -15,15 +15,25 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-library
-  exposed-modules:     StarVote.Crypto
-  -- other-modules:
+executable star-crypto
+  main-is:             Main.hs
+  other-modules:       StarVote.Crypto.ThresholdElGamal
+                       StarVote.Crypto.Types
   -- other-extensions:
-  build-depends:       array >= 0.5,
+  build-depends:       acid-state >= 0.12,
+                       array >= 0.5,
+                       arithmoi >= 0.2,
                        base >=4.7 && <4.8,
+                       blaze-html >=0.7 && <0.8,
                        bytestring >=0.10,
                        crypto-api >= 0.13,
-                       monadcryptorandom >= 0.6
+                       cryptohash-cryptoapi >= 0.1,
+                       --   >=0.5.3 looks like an odd constraint, see https://github.com/TomMD/DRBG/pull/4
+                       DRBG >=0.5.3 && <0.6,
+                       monadcryptorandom >= 0.6,
+                       safecopy >=0.8 && <0.9,
+                       star-util >= 0.1,
+                       text >= 1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
 
