--- a/star-util/star-util.cabal
+++ b/star-util/star-util.cabal
@@ -31,7 +31,8 @@ Library
     snap                      >= 0.13  && < 0.14,
     snap-core                 >= 0.9   && < 0.10,
     snap-server               >= 0.9   && < 0.10,
-    star-types
+    star-types,
+    transformers              >= 0.4.1.0 && < 0.5
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
