--- a/star-crypto/star-crypto.cabal
+++ b/star-crypto/star-crypto.cabal
@@ -21,19 +21,29 @@ executable star-crypto
                        StarVote.Crypto.Types
   -- other-extensions:
   build-depends:       acid-state >= 0.12,
+                       aeson >= 0.8,
+                       append-only-bb >=0.0 && <0.1,
                        array >= 0.5,
                        arithmoi >= 0.2,
                        base >=4.7 && <4.8,
                        blaze-html >=0.7 && <0.8,
+                       binary >=0.7 && <0.8,
+                       byteable >=0.1 && <0.2,
                        bytestring >=0.10,
                        crypto-api >= 0.13,
                        cryptohash-cryptoapi >= 0.1,
+                       crypto-pubkey >= 0.2,
+                       crypto-pubkey-types >= 0.4,
+                       crypto-random >= 0.0.8,
                        --   >=0.5.3 looks like an odd constraint, see https://github.com/TomMD/DRBG/pull/4
                        DRBG >=0.5.3 && <0.6,
+                       HTTP >=4000.2 && <4000.3,
                        monadcryptorandom >= 0.6,
                        safecopy >=0.8 && <0.9,
                        star-util >= 0.1,
-                       text >= 1.1
+                       text >=1.1,
+                       time >=1.4 && <1.5,
+                       utf8-string >=0.3 && <0.4
   hs-source-dirs:      src
   default-language:    Haskell2010
 
