--- a/star-terminal/star-terminal.cabal
+++ b/star-terminal/star-terminal.cabal
@@ -63,11 +63,14 @@ Executable star-terminal
     bytestring                >= 0.9.1  && < 0.11,
     case-insensitive,
     containers,
+    crypto-api                >= 0.13   && < 0.14,
     data-default,
+    DRBG                      >=0.5     && <0.6,
     HPDF                      >=1.4.6   && <1.5,
     http-client,
     http-client-tls,
     MonadCatchIO-transformers >= 0.2.1  && < 0.4,
+    monadcryptorandom         >= 0.6    && < 0.7,
     mtl                       >= 2      && < 3,
     lens                      >= 4.4    && < 4.7,
     old-locale,
