--- a/star-keygen/star-keygen.cabal
+++ b/star-keygen/star-keygen.cabal
@@ -21,13 +21,13 @@ executable star-keygen
   build-depends:       acid-state >= 0.12,
                        aeson >= 0.8,
                        append-only-bb >=0.0 && <0.1,
-                       array >= 0.5,
                        base >=4.7 && <4.8,
                        base64-bytestring >= 0.1 && <1.1,
                        blaze-html >=0.7 && <0.8,
                        binary >=0.7 && <0.8,
                        byteable >=0.1 && <0.2,
                        bytestring >=0.10,
+                       containers >=0.5 && <0.6,
                        crypto-api >= 0.13,
                        cryptohash-cryptoapi >= 0.1,
                        crypto-pubkey >= 0.2,
