implement a vote tally

--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -23,15 +23,19 @@ executable star-controller
                        aeson                     >=0.7    && <0.9,
                        base                      >=4.6    && <4.8,
                        blaze-html                >=0.7    && <0.8,
+                       base64-bytestring         >=1.0    && <1.1,
+                       binary                    >=0.7    && <0.8,
                        bytestring                >=0.10.4 && < 0.11,
                        containers                >=0.5    && <0.6,
                        http-client               >=0.4    && <0.5,
                        http-client-tls           >=0.2    && <0.3,
                        lens                      >= 4.4   && <4.6,
                        MonadCatchIO-transformers >=0.3    && <0.4,
+                       multiset                  >=0.2    && <0.3,
                        random                    >=1.0    && <1.2,
                        safecopy                  >=0.8.3  && <0.9,
                        split                     >=0.2    && <0.3,
+                       star-crypto               >=0.1    && <0.2,
                        star-types                >=0.1    && <0.2,
                        star-util                 >=0.1    && <0.2,
                        text                      >=1.1    && <1.3,
