--- a/star-crypto/star-crypto.cabal
+++ b/star-crypto/star-crypto.cabal
@@ -29,7 +29,8 @@ library
                        containers >=0.5 && <0.6,
                        crypto-api >= 0.13,
                        crypto-random >= 0.0.8,
-                       monadcryptorandom >= 0.6
+                       monadcryptorandom >= 0.6,
+                       mtl >=2.2 && <2.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
