--- a/star-controller/star-controller.cabal
+++ b/star-controller/star-controller.cabal
@@ -13,6 +13,8 @@ category:            Web
 build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
+data-files:
+  static/*.css
 
 executable star-controller
   main-is:             Main.hs
@@ -34,6 +36,7 @@ executable star-controller
                        multiset                  >=0.2    && <0.3,
                        random                    >=1.0    && <1.2,
                        safecopy                  >=0.8.3  && <0.9,
+                       snap-core                 >=0.9    && <0.10,
                        split                     >=0.2    && <0.3,
                        star-crypto               >=0.1    && <0.2,
                        star-types                >=0.1    && <0.2,
