--- a/star-voter-db/star-voter-db.cabal
+++ b/star-voter-db/star-voter-db.cabal
@@ -25,6 +25,7 @@ executable star-voter-db
                        blaze-markup             >=0.6     && <0.7,
                        blaze-html               >=0.7.0.3 && <0.8,
                        bytestring               >=0.10    && <0.11,
+                       cassava                  >=0.4     && <0.5,
                        containers               >=0.5     && <0.6,
                        data-default             >=0.5     && <0.6,
                        digestive-functors       >=0.7.1.1 && <0.8,
@@ -36,6 +37,7 @@ executable star-voter-db
                        star-types               >=0.1     && <0.2,
                        star-util                >=0.1     && <0.2,
                        text                     >=1.1     && <1.3,
-                       transformers             >=0.4     && <0.5
+                       transformers             >=0.4     && <0.5,
+                       vector                   >=0.10    && <0.11
   -- hs-source-dirs:      
   default-language:    Haskell2010
